--- a/VFF_projekt.bib
+++ b/VFF_projekt.bib
@@ -38,12 +38,12 @@
 	note = {tilgået efter besøg hos VFF den 29-11-2025},
 }
 
-@misc{datamodenhed_alexandra,
-	author = {{Alexandra Instituttet}},
-	title = {Find vej i din dataindsats},
-	howpublished = {\url{https://alexandra.dk/wp-content/uploads/2020/09/Alexandra-Instituttet-BDBA-Find-vej-i-din-dataindsats.pdf}},
-	year = {2024},
-	note = {[tilgået 11-11-2025]},
+@misc{Data_i_en_forretningskontekst,
+	author = {{Lotte Soelberg Kronbæk}},
+	title = {Datamodenhed del 2},
+	howpublished = {\url{https://eadania.mrooms.net/course/section.php?id=92687}},
+	year = {2025},
+	note = {[powerpoint fra undervisningen]},
 }
 
 
@@ -64,6 +64,7 @@
   year      = {2013},
   edition   = {1},
 }
+
 
 @book{bang_2025,
   author    = {Claus Grand Bang},
