--- a/VFF_projekt.bib
+++ b/VFF_projekt.bib
@@ -46,6 +46,14 @@
 	note = {[powerpoint fra undervisningen]},
 }
 
+@misc{ChatGPT_version_5_0,
+	author = {{ChatGPT}},
+	title = {Open AI},
+	howpublished = {\url{https://chat.openai.com/chat}},
+	year = {2022},
+	note = {[Brugt chatbot som inspirations- og samtalepartner]},
+}
+
 @book{liv_egholm_2014,
   author    = {Liv Egholm},
   title     = {Videnskabsteori},
